cmake_minimum_required(VERSION 3.0.0)
project(PiDroneFlightComputer VERSION 0.1.0)

include(CTest)
enable_testing()

include(CPack)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

file(GLOB_RECURSE SOURCES
    src/*.h
    src/*.cpp
)

add_executable(PiDroneFlightComputer ./src/main.cpp ${SOURCES})

add_subdirectory(external/pigpio)
target_include_directories(PiDroneFlightComputer INTERFACE pigpio)
target_link_libraries(PiDroneFlightComputer pigpio)
